[build-system]
requires = [
  "jinja2",
  "nanobind>=2.0",
  "pyyaml",
  "scikit-build-core>=0.10",
  "sympy",
]
build-backend = "scikit_build_core.build"

[project]
name = "mind-simulator"
version = "0.1.0"
description = "MIND_Sim is designed for studying Multiscale Integrative Neuronal Dynamics"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "Copyright" }
authors = [
  { name = "Hengye Zhu", email = "gluciferd@gmail.com" },
]
dependencies = [
  "find-libpython",
  "numpy",
  "sympy>=1.3",
]

[project.urls]
Homepage = "https://github.com/HengyeZhu/MIND_Sim"
Repository = "https://github.com/HengyeZhu/MIND_Sim"

[project.scripts]
mind-simulator = "mind_sim.cli:main"
mind-nrnivmodl = "mind_sim.cli:mind_nrnivmodl_main"

[tool.scikit-build]
cmake.version = ">=3.20"
ninja.version = ">=1.10"
cmake.build-type = "Release"
wheel.packages = []
wheel.license-files = [
  "Copyright",
  "external/CLI11/LICENSE",
  "external/Random123/LICENSE",
  "external/eigen/COPYING.*",
  "external/fmt/LICENSE",
  "external/json/LICENSE.MIT",
  "external/pybind11/LICENSE",
  "external/spdlog/LICENSE",
  "src/mod/neuron/Copyright",
  "src/micro/sim/coreneuron/Copyright",
]

[tool.scikit-build.cmake.define]
MIND_SIM_ENABLE_GPU = "OFF"
MIND_SIM_BINARY_DIST_BUILD = { default = "OFF", env = "MIND_SIM_BINARY_DIST_BUILD" }

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = [
  "*-win32",
  "*-musllinux*",
  "*-manylinux_i686",
  "*-macosx*",
]
test-command = "python {package}/packaging/python/check_wheel_install.py"

[tool.cibuildwheel.linux]
archs = [
  "x86_64",
]
manylinux-x86_64-image = "mindsim_wheel:manylinux_2_28_x86_64"
repair-wheel-command = "auditwheel -v repair -w {dest_dir} {wheel} --exclude 'libgomp.so.1'"
environment-pass = [
  "CMAKE_BUILD_PARALLEL_LEVEL",
  "MIND_SIM_BINARY_DIST_BUILD",
]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
python_files = [
  "test*.py",
  "*_test.py",
]
